--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <p>Is logged: {{ isLogged }}</p>
-
+<h1 class="text-3xl font-bold underline bg-cyan-500">
+  Hello world!
+</h1>
 <ng-container *ngIf="!isLogged; else elseTemplate">
   <app-login></app-login>
 </ng-container>
