--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,11 @@
   <label for="">Contraseña: </label>
   <input type="text" formControlName="password" />
 
+  <label
+    for="last-name"
+    class="block text-sm font-semibold leading-6 text-gray-900"
+    >Last name</label
+  >
+
   <button (click)="login()">Login</button>
 </form>
-
